--- a/笔记/🖥️网页搭建/自定义网页收集回馈.md
+++ b/笔记/🖥️网页搭建/自定义网页收集回馈.md
@@ -1,7 +1,8 @@
-# 自定义表单html
+# 自定义网页收集回馈
+## 自定义表单html
 [无服务器代码的自定义表单 |Formspree](https://formspree.io/)
 · 用户点击后可以提交邮箱及反馈的小API，运用在hexo blog
-# Google Analytics
+## Google Analytics
 在网站中插入代码和授权码可以记录用户行为数据分析
 [Analytics](https://analytics.google.com/analytics/web/#/p451960010/reports/reportinghub?params=_u..nav%3Dmaui)
 
