--- a/笔记/🖥️网页搭建/网页搭建项目.md
+++ b/笔记/🖥️网页搭建/网页搭建项目.md
@@ -1,12 +1,17 @@
+---
+comment: true
+tags:
+  - GitHub
+---
+
 # 目前正在整备的页面
 
-1. `xialio/go-proxy-bingai: 用 Vue3 和 Go 搭建的微软 New Bing 演示站点，拥有一致的 UI 体验，支持 ChatGPT 提示词，支持 API 调用，国内可用。`[ (github.com)](https://github.com/xialio/go-proxy-bingai)dnsarmy[bing.xialiobingai.dns.army/web/#/](https://bing.xialiobingai.dns.army/web/#/ "https://bing.xialiobingai.dns.army/web/#/")
+1. xialio/go-proxy-bingai: 用 Vue3 和 Go 搭建的微软 New Bing 演示站点，拥有一致的 UI 体验，支持 ChatGPT 提示词，支持 API 调用，国内可用。[ (github.com)](https://github.com/xialio/go-proxy-bingai)dnsarmy[bing.xialiobingai.dns.army/web/#/](https://bing.xialiobingai.dns.army/web/#/ "https://bing.xialiobingai.dns.army/web/#/")
 2. · 一个基于nolebase的项目改编网页 # 需求：更改主题和制作相关文档内容（项目未定）[xialio.github.io/nolebase/](https://xialio.github.io/nolebase/ "https://xialio.github.io/nolebase/")
 3. xialio.md [github.com/xialio](https://github.com/xialio "https://github.com/xialio")
-4. · github/personal-website **[personal-website](https://github.com/xialio/personal-website)**
-5. #About 一个简洁的ai图关键词图站· [vercel](https://xialio-github-io.vercel.app) **[xialio.github.io](https://github.com/xialio/xialio.github.io)** 
-6. #About xialio note Website . [vercel]([https://xialio-note.vercel.app/](https://xialio-note.vercel.app/))[note.xialio.us.kg/](https://note.xialio.us.kg/ "https://note.xialio.us.kg/")
-7. #About 基于hexo的blog 页面 正准备重建 **[hexoBlogFile](https://github.com/xialio/hexoBlogFile)
+4. github/personal-website **[personal-website](https://github.com/xialio/personal-website)**
+5. 一个简洁的ai图关键词图站· [vercel](https://xialio-github-io.vercel.app) **[xialio.github.io](https://github.com/xialio/xialio.github.io)** 
+6. xialio note Website . [vercel]([https://xialio-note.vercel.app/](https://xialio-note.vercel.app/))[note.xialio.us.kg/](https://note.xialio.us.kg/ "https://note.xialio.us.kg/")
+7. 基于hexo的blog 页面 极光主题 **[hexoBlogFile](https://github.com/xialio/hexoBlogFile)
 8. [Next.js Starter Templates & Themes | Vercel – Vercel](https://vercel.com/templates/next.js)
 9. https://github.com/gatsbyjs/gatsby [www.gatsbyjs.com](https://www.gatsbyjs.com/ "https://www.gatsbyjs.com")
-10. 
